--- a/psychro-diagram/locales/en.json
+++ b/psychro-diagram/locales/en.json
@@ -1,4 +1,4 @@
 {
     "name": "Empty widget",
-    "description": "A empty widget to begin a new development (for developpers only)"
+    "description": "A widget for viewing temperature and humidity on the psychrometric diagram"
 }
