--- a/psychro-diagram/locales/fr.json
+++ b/psychro-diagram/locales/fr.json
@@ -1,4 +1,4 @@
 {
-   "name": "Widget vide",
-   "description": "Un widget vide pour le développement d'un nouveau widget (pour développeurs uniquement)"
+   "name": "PsycrométricDiagram",
+   "description": "Un widget permettant de visualiser la température l'humidité sur le diagramme de l'air humide"
 }
