--- a/psychro-diagram/locales/en.json
+++ b/psychro-diagram/locales/en.json
@@ -1,4 +1,4 @@
 {
-    "name": "Empty widget",
+    "name": "PsycrométricDiagram",
     "description": "A widget for viewing temperature and humidity on the psychrometric diagram"
 }
