Mise à jour disposition

--- a/psychro-diagram/locales/en.json
+++ b/psychro-diagram/locales/en.json
@@ -1,4 +1,22 @@
 {
     "name": "PsycrométricDiagram",
-    "description": "A widget for viewing temperature and humidity on the psychrometric diagram"
+    "description": "A widget for viewing temperature and humidity on the psychrometric diagram",
+    "configurationSchema": {
+		"device": {
+			"name": "Data to display",
+			"description": "Select the data that you want to display"
+		},
+      "precision": {
+			"name": "Precision of the value",
+			"description": "Number of digits after the decimal point"
+      },
+      "dateDisplay": {
+			"name": "Update date",
+			"description": ""
+      },
+      "automaticScale": {
+         "name": "Automatic scale",
+         "description": "The widget adjust automatically the value and the unit"
+      }  
+	}
 }
